# python_oooenv

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
oooenv/cli/: main.py
oooenv/cmds/: install.py  manage_env_cfg.py  uno_lnk.py  updater.py
oooenv/utils/: local_paths.py  sys_info.py  uno_paths.py
tests/: conftest.py  test_update.py
